@@ -37,7 +37,7 @@ the <b>System Initialization</b> chapter of the <a href=http://refspecs.linux-fo
 The LSB Init Script names assigned by LANANA will only consist of the ASCII characters [a-z0-9].
 
 <UL>
-<LI><A HREF="init.txt">Current LSB Init Script Name List</A> 1 Jun 2011
+<LI><A HREF="init.txt">Current LSB Init Script Name List</A> 11 Aug 2011
 <A HREF="CHANGELOG">CHANGELOG</A>
 </UL>
 
@@ -59,7 +59,7 @@ This web page is hosted by <A HREF="http://www.kernel.org/"><font color="#FFFFFF
 </td>
 <td align=right width="33%">
 <FONT SIZE=-1 color="#FFFFFF">
-Last Modified: 1 Jun 2011
+Last Modified: 11 Aug 2011
 </FONT>
 </td>
 <tr>
