@@ -373,7 +373,7 @@ nmb	Samba	lmuelle@suse.de
 nntpcache	Reserved for LSB-Compliant Distributions	lsb@lanana.org
 noffle	Reserved for LSB-Compliant Distributions	lsb@lanana.org
 noflushd	Reserved for LSB-Compliant Distributions	lsb@lanana.org
-nps	Netezza Corp.	psmith@netezza.com
+nps	Netezza Corp.	pds@us.ibm.com
 nscd	Reserved for LSB-Compliant Distributions	lsb@lanana.org
 nsmon	Reserved for LSB-Compliant Distributions	lsb@lanana.org
 ntop	Reserved for LSB-Compliant Distributions	lsb@lanana.org
