@@ -751,7 +751,7 @@ noffle                    Reserved for LSB-Compliant Distributions              
                                                                                   
 noflushd                  Reserved for LSB-Compliant Distributions                lsb@lanana.org
                                                                                   
-nps                       Netezza Corp.                                           psmith@netezza.com
+nps                       Netezza Corp.                                           pds@us.ibm.com
                                                                                   
 nscd                      Reserved for LSB-Compliant Distributions                lsb@lanana.org
                                                                                   
