@@ -138,4 +138,4 @@ susefirewall2_final, dvb, vdr, resmgt (ludwig.nussel@suse.de)
 31 May 2011 - restore tvpvrd lost @kernel.org
 31 May 2011 - Add shibd for Peter Schober
 01 Jun 2011 - Add raptoricad, raptormuad, raptorwebd for Rhys Smith (smith@cardiff.ac.uk)
-
+11 Aug 2011 - Change contact email for Netezza
