@@ -114,4 +114,4 @@
 08 Jul 2011 - Added 'imgtec'
 11 Jul 2011 - Added 'dam'
 05 Aug 2011 - Added 'slon'
-
+11 Aug 2011 - Change contact email for Netezza
