@@ -75,4 +75,5 @@
                 (xfer from Google docs entry of 3/3/2010)
 29 May 2010 - Added 'lsb-rob'
 11 Jul 2011 - Added lsb-dam, lsb-dam3
+11 Aug 2011 - Change contact email for Netezza
 
